# organ

./: .gitignore  mul_div_simu_behav.wcfg
hw/: a.out  addr1.h  addr2.h  main.c
lab1/: kmp.c  kmp1.s  main.c  main.i  main.o.txt  main.out  main.s  main.txt  pattern.asm  pattern.c
lab2/: .gitignore  Booth.sv  Booth.vcd  CMakeLists.txt  Divider.sv  README.md  build.sbt  divider.vcd  makefile  mul.vcd  result.txt  xmake.lua
lab2/project/: .scalafmt.conf
lab2/scirpt/: sed.py
lab2/src/main/scala/booth/: Booth.scala
lab2/src/main/scala/divider/: Divider.scala
lab2/src/test/cxx/: Booth.cxx  Divider.cxx  inc.h  main.cxx  tb.cxx
lab2/verilog/: booth.sv  divider.sv  multiplier.sv
lab3/: .scalafmt.conf  CMakeLists.txt  DCache.sv  ICache.sv  ICache.v  README.md  SRAM.sv  build.sbt  load_all_wave.tcl  makefile  read.txt  soc_simu_behav.wcfg  write.txt
lab3/bak/: DCache.scala  write.txt
lab3/script/: sed.py
lab3/src/main/scala/cache/: DCache.scala  ICache.scala  LRU.scala
lab3/src/main/scala/common/: Constants.scala
lab3/src/main/scala/memory/: Memory.scala
lab3/src/test/cxx/: Booth.cxx  Divider.cxx  inc.h
lab3/verilog/: DCache.sv  DCache.v  ICache.sv  ICache.v
rars/: riscv3.asm  riscv4.asm
